# Rusty-tasks

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
src/: main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/file/: mod.rs
src/logging/: mod.rs
src/todo/: file.rs  mod.rs  tasks.rs
src/todo_file/: mod.rs
