[package]
name = "rusty-tasks"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.5.1", features = ["derive"] }
comrak = "0.18.0"
figment = { version = "0.10.10", features = ["env", "serde_json", "json"] }
regex = "1.8.4"
serde = { version = "1.0.164", features = ["serde_derive"] }
serde_json = "1.0.97"
resolve-path = "0.1.0"
simple_logger = "4.3.3"
log = "0.4.21"
